# ProjectTrans

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
client/: CMakeLists.txt
client/cmake/: dependencies.cmake  entry_points.cmake  options.cmake  project_options.cmake  source_collection.cmake
client/include/common/enum/: common_enum.hpp
client/include/common/protocol/: danejoe_protocol.hpp  frame_assembler.hpp  network_endpoint.hpp
client/include/common/util/: screen_util.hpp  thread_pool.hpp
client/include/context/: connect_context.hpp  trans_context.hpp
client/include/controller/: block_schedule_controller.hpp  view_event_controller.hpp
client/include/main/: client_app.hpp
client/include/model/entity/: block_entity.hpp  client_file_entity.hpp  task_entity.hpp
client/include/model/transfer/: block_transfer.hpp  download_transfer.hpp  envelope_transfer.hpp  test_transfer.hpp
client/include/model/view/: task_table_model.hpp
client/include/protocol/: client_message_codec.hpp
client/include/repository/: block_repository.hpp  client_file_repository.hpp  task_repository.hpp
client/include/service/: block_service.hpp  client_file_service.hpp  network_service.hpp  task_service.hpp  task_view_service.hpp  trans_service.hpp
client/include/view/dialog/: connection_test_dialog.hpp  new_download_dialog.hpp  new_upload_dialog.hpp  task_info_dialog.hpp
client/include/view/event/: event_envelope.hpp  view_event_hub.hpp
client/include/view/widget/: client_main_window.hpp  task_table_widget.hpp
client/source/context/: connect_context.cpp
client/source/controller/: block_schedule_controller.cpp  view_event_controller.cpp
client/source/main/: client_app.cpp  console_main.cpp  widget_main.cpp
client/source/model/entity/: block_entity.cpp  client_file_entity.cpp  task_entity.cpp
client/source/model/transfer/: block_transfer.cpp  download_transfer.cpp
client/source/model/view/: task_table_model.cpp
client/source/protocol/: client_message_codec.cpp
client/source/repository/: block_repository.cpp  client_file_repository.cpp  task_repository.cpp
client/source/service/: block_service.cpp  client_file_service.cpp  network_service.cpp  task_service.cpp  trans_service.cpp
client/source/view/dialog/: connection_test_dialog.cpp  new_download_dialog.cpp  new_upload_dialog.cpp  task_info_dialog.cpp
client/source/view/event/: event_envelope.cpp  view_event_hub.cpp
client/source/view/widget/: client_main_window.cpp  task_table_widget.cpp
client/test/: CMakeLists.txt
client/test/source/repository/: test_block_repository.cpp  test_client_file_repository.cpp  test_task_repository.cpp
client/test/source/service/: test_task_service.cpp
cmake/: dependencies.cmake  (+5 more)
common/: CMakeLists.txt
common/include/danejoe/condition/: endpoint_range.hpp  i_condition.hpp  range_condition.hpp  scatter_point_range.hpp  single_interval.hpp  text_condition.hpp  wildcard_text.hpp
common/include/danejoe/database/: i_sql_driver.hpp  i_sql_stringify.hpp  sql_builder.hpp  sql_cell.hpp  sql_condition.hpp  sql_config.hpp  sql_database.hpp  sql_database_manager.hpp  sql_query.hpp  sql_schema.hpp  sql_sign_config.hpp  sql_table_query.hpp  sqlite_driver.hpp  sqlite_stringify.hpp
common/include/danejoe/logger/: async_logger.hpp  i_logger.hpp  logger_config.hpp  logger_manager.hpp
common/include/danejoe/stringify/: stringify_config.hpp  stringify_format.hpp  stringify_to_string.hpp  stringify_traits.hpp
common/source/danejoe/condition/: text_condition.cpp  wildcard_text.cpp
common/source/danejoe/database/: i_sql_stringify.cpp  sql_builder.cpp  sql_query.cpp  sql_schema.cpp  sqlite_stringify.cpp
common/source/danejoe/logger/: async_logger.cpp  i_logger.cpp
common/source/danejoe/stringify/: stringify_config.cpp  stringify_format.cpp
server/: CMakeLists.txt  CMakePresets.json
server/cmake/: dependencies.cmake  entry_points.cmake  options.cmake  source_collection.cmake  warnings.cmake
server/include/common/protocol/: frame_assembler.hpp
server/include/common/util/: screen_util.hpp
server/include/connect/: message_handler.hpp  server_trans.hpp  trans_context.hpp
server/include/danejoe/condition/: endpoint_range.hpp  range_condition.hpp  scatter_point_range.hpp
server/include/danejoe/database/: i_sql_driver.hpp  i_sql_stringify.hpp  sql_builder.hpp  sql_config.hpp  sql_database.hpp  sql_database_manager.hpp  sql_schema.hpp  sql_sign_config.hpp  sql_table_query.hpp  sqlite_driver.hpp
server/include/danejoe/logger/: logger_manager.hpp
server/include/danejoe/stringify/: stringify_to_string.hpp
server/include/main/: server_app.hpp
server/include/model/: block_response_info.hpp  server_file_info_table_model.hpp
server/include/model/entity/: server_file_entity.hpp
server/include/model/transfer/: block_transfer.hpp  download_transfer.hpp  envelope_transfer.hpp  test_transfer.hpp
server/include/model/view/: server_file_info_table_model.hpp
server/include/protocol/: server_message_codec.hpp
server/include/repository/: server_file_info_repository.hpp
server/include/runtime/: business_runtime.hpp  network_runtime.hpp
server/include/service/: server_file_info_service.hpp  trans_service.hpp
server/include/view/dialog/: add_file_dialog.hpp
server/include/view/widget/: connection_info_widget.hpp  resource_info_widget.hpp  server_main_window.hpp
server/source/common/util/: screen_util.cpp  thread_pool.cpp
server/source/connect/: http_context.cpp  message_handler.cpp  server_trans.cpp  trans_context.cpp
server/source/main/: server_app.cpp  server_thread.cpp  widget_main.cpp
server/source/model/: server_file_info.cpp  server_file_info_table_model.cpp
server/source/protocol/: server_message_codec.cpp
server/source/repository/: server_file_info_repository.cpp
server/source/runtime/: business_runtime.cpp  network_runtime.cpp
server/source/service/: server_file_info_service.cpp
server/test/: CMakeLists.txt
simple_server/: CMakeLists.txt
simple_server/resource/: server_resource.qrc
simple_server/source/: main.cpp
(+635 files in other folders)
